# rpg_dvs_ros_modified

./: .gitignore  README.md
davis_ros_driver/config/: DAVIS240C.yaml
davis_ros_driver/include/davis_ros_driver/: driver.h
davis_ros_driver/src/: driver.cpp  driver2.cpp
dvs_msgs/: CMakeLists.txt  package.xml
dvs_msgs/msg/: EventArray.msg  EventImage.msg  EventMagStruct.msg  EventStruct.msg
dvs_renderer/launch/: davis_mono.launch  davis_mono_events_only.launch  dvxplorer_event_only.launch  dvxplorer_event_only_nodelet.launch
dvxplorer_mc_ceres/: CMakeLists.txt  dvxplorer_mc_ceres_nodelet.xml  package.xml
dvxplorer_mc_ceres/cfg/: DVXplorer_MC_Ceres.cfg
dvxplorer_mc_ceres/config/: evk4.yaml  evk4_crop.yaml
dvxplorer_mc_ceres/include/: LBFGSB.h
dvxplorer_mc_ceres/include/LBFGSpp/: LineSearchMoreThuente.h
dvxplorer_mc_ceres/include/dvxplorer_mc_ceres/: driver.h  driver_evk4.h  driver_evk4_lbfgsb.h  driver_nodelet.h  mc_gradient.h  mc_gradient_base.h  mc_gradient_lbfgsb.h  motion_compensation.cuh  motion_compensation_float.h  utils.h
dvxplorer_mc_ceres/launch/: mc.launch  mc_evk4.launch  mc_evk4_crop.launch
dvxplorer_mc_ceres/src/: driver.cpp  driver_evk4.cpp  driver_evk4_lbfgsb.cpp  driver_node.cpp  driver_node_evk4.cpp  driver_node_evk4_lbfgsb.cpp  driver_nodelet.cpp  mc_gradient_lbfgsb.cu  motion_compensation.cu  motion_compensation_float.cu
dvxplorer_motion_compensator/: CMakeLists.txt  package.xml
dvxplorer_motion_compensator/include/dvxplorer_motion_compensator/: cuda_compensator.h  motion_compensator.h
dvxplorer_motion_compensator/src/: cuda_compensator.cu  motion_compensator.cpp  motion_compensator_node.cpp
dvxplorer_ros_driver/: CMakeLists.txt  package.xml
dvxplorer_ros_driver/config/: dvx_mini.yaml  dvxplorer_lite.yaml
dvxplorer_ros_driver/include/dvxplorer_ros_driver/: driver.h  driver_old.h  driver_ros2.h  rm3100_spi_userspace.h
dvxplorer_ros_driver/launch/: mono.launch  mono.py
dvxplorer_ros_driver/scripts/: firenet_trt_fp32.pth  subEvent.py
dvxplorer_ros_driver/src/: driver.cpp  driver1.cpp  driver_node_ros2.cpp  driver_node_ros2_motion_compensated.cpp  driver_old.cpp  driver_ros2.cpp  rm3100_spi_userspace.c
vrpn_client_ros/launch/: sample.launch  sample_nodelet.launch
