<?xml version="1.0"?>
<package format="3">
  <name>dvs_msgs</name>
  <version>0.0.0</version>
  <description>The dvs_msgs package</description>
  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <license>MIT</license>

  <!-- <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend> -->
  <buildtool_depend >ament_cmake</buildtool_depend>
  <depend >rclcpp</depend>
  <test_depend >ament_lint_auto</test_depend>
  <test_depend >ament_lint_common</test_depend>

  <depend>std_msgs</depend>

  <member_of_group >rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <rosbag migration_rule_file="EventArrayRule.bmr"/>
  </export>
</package>
