<?xml version="1.0"?>
<package format="2">
  <name>dvxplorer_mc_ceres</name>
  <version>0.0.0</version>
  <description>The dvxplorer_mc_ceres package</description>
  <maintainer email="luca.longinotti@inivation.com">Luca Longinotti</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>camera_info_manager</depend>
  <depend>nodelet</depend>
  <depend>event_camera_msgs</depend>
  <depend>event_camera_codecs</depend>
  <depend>compressed_image_transport</depend>

  <export>
    <nodelet plugin="${prefix}/dvxplorer_mc_ceres_nodelet.xml"/>
  </export>

</package>
