<?xml version="1.0"?>
<package format="3">
  <name>dvxplorer_ros_driver</name>
  <version>0.0.0</version>
  <description>The dvxplorer_ros_driver package</description>
  <maintainer email="luca.longinotti@inivation.com">Luca Longinotti</maintainer>
  <license>MIT</license>


  <!-- ROS2 dependencies -->
  <buildtool_depend >ament_cmake</buildtool_depend>
  <buildtool_depend >ament_cmake_ros</buildtool_depend>
  <buildtool_depend >ament_cmake_auto</buildtool_depend>
  <depend >rclcpp</depend>
  <depend >rclcpp_components</depend>
  <test_depend >ament_lint_auto</test_depend>
  <test_depend >ament_lint_common</test_depend>
  <test_depend >ament_cmake_clang_format</test_depend>

  <depend>ros_environment</depend>
  <depend>sensor_msgs</depend>
  <depend>dvs_msgs</depend>
  <depend>nodelet</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>camera_info_manager</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>




  <export>
    <nodelet plugin="${prefix}/dvxplorer_ros_driver_nodelet.xml"/>
    <build_type >ament_cmake</build_type>
  </export>

</package>
